--- a/prayer-times-android/app/src/main/res/layout/activity_main.xml
+++ b/prayer-times-android/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="9999-12-30"
+                android:text="@string/date_example"
                 android:textColor="#605D5D"
-                android:textSize="35sp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="25sp"/>
 
             <TextView
                 android:id="@+id/infoTextView"
@@ -35,10 +34,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="10dp"
-                android:text="TextView"
+                android:text="@string/time_remaining_example"
                 android:textColor="#605D5D"
                 android:textSize="23sp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:id="@+id/timeRemainingTextView"
@@ -47,10 +46,9 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:text="99:99"
+                android:text="@string/time_example"
                 android:textColor="#605D5D"
-                android:textSize="80sp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="80sp"/>
 
             <ListView
                 android:id="@+id/scheduleListView"
@@ -58,7 +56,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:divider="@color/material_blue_grey_800"
-                android:dividerHeight="1dp" />
+                android:dividerHeight="1dp"
+                tools:ignore="NestedScrolling" />
 
         </LinearLayout>
 
